# persistent-recursive-intelligence-v2

./: .gitignore  ADR_002_multi_language_support.md  ADVERSARIAL_TEST_PLAN_V2_RESULTS.md  ARCHITECTURE.md  CHANGELOG.md  CLEANUP_PLAN.md  CODE_REVIEW_PRI_RECURSIVE_SELF_IMPROVEMENT.md  COMMAND_HIDING_IMPLEMENTATION.md  DOCUMENTATION_AUDIT_REPORT.md  EMERGENCY_SECURITY_RESPONSE_COMPLETE.md  HYDRA_CLEANUP_PLAN.md  Mesopredator: Adversarial Test Plan v2.0.md  Mesopredator: Adversarial Test Plan v3.0.md  OPENMW_ANALYSIS_REPORT.md  OPENMW_BLOODLUST_HUNT_SESSION_REPORT.md  OPENMW_SEPARATION_COMPLETE.md  PACKAGE_STRUCTURE_SUMMARY.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_COMPLETION_REPORT.md  README.md  REMAINING_SCRIPTS_ANALYSIS.md  SAFETY_STATUS_SUMMARY.md  SECURITY_AUDIT_REPORT.md  SECURITY_HARDENED_STATUS.md  SELF_ANALYSIS_FINDINGS.md  TESTING_EXPANSION_PLAN.md  TESTING_REALITY_CHECK.md  USER_MANUAL.md  advanced_syntax_fixer.py  adversarial_fixer_test_results.json  analysis_log.json  analyze_cpp_project.py  claude_wrapper_analysis.json  claude_wrapper_analysis_improved.json  claude_wrapper_analysis_updated.json  claude_wrapper_enhanced_analysis.json  cleanup_openmw_files.sh  code_connector_metrics.json  code_connector_test_results.json  complete_adversarial_test_report_20250703_090139.json  (+126 more)
.github/workflows/: ci.yml  security-daily.yml
archive/: README.md
archive/broken_files/: integrate_memory_intelligence.py
archive/development_artifacts/: claude_wrapper_false_positive_training.json  claude_wrapper_training_batch.json  conceptual_ouroboros_test.py  fixed_conceptual_transfer_test.py  marathon_endurance_test.py  mesopredator_config.json  pri_self_analysis_enhanced.json  rebrand_mesopredator.py  rebranding_config.json  simple_ouroboros_test.py  targeted_ouroboros_test.py  test_assumption_cascade_failure.py  test_conceptual_bug_transfer.py  test_emergency_simple.py  test_simple_comparison.py
archive/old/: README.md  complete_adversarial_test_report_20250703_184038.json  comprehensive_adversarial_test_report_20250703_181554.json  gray_hat_ethics_test.py  orchestrator_synthesis_test.py  safety_escape_test.py  test_basic_safety.py  (+13 more)
docs/: AUTHENTIC_POSITIONING.md  AUTONOMOUS_TOOL_ORCHESTRATION_ANALYSIS.md  AUTO_UPDATER_QUICK_REFERENCE.md  AUTO_UPDATER_TECHNICAL_REFERENCE.md  AUTO_UPDATER_USER_GUIDE.md  CODE_REVIEW_METRICS_INTEGRATION_2025_06_25.md  CODE_REVIEW_PRI_BUG_FIXES_2025_06_25.md  COMPREHENSIVE_SAFETY_VALIDATION_SUMMARY.md  COMPREHENSIVE_SYSTEM_DOCUMENTATION.md  DEBUGGING_CAPABILITIES.md  EXTERNAL_PROJECT_SAFETY_VALIDATION_2025-06-28.md  FEATURE_STATUS.md  HUNT_DOCUMENTATION.md  Mesopredator PRI: Technical Execution Plan Q3 2025.md  Mesopredator: A Phased Evolution Towards a Decentralized AI Development Ecosystem.md  Mesopredator: Adversarial Test Plan.md  OPENMW_SEVEN_CYCLES_HUNT_RESULTS.md  PARADIGM_SHIFT_AI_FIRST_DEVELOPMENT.md  PREDATOR_EFFICIENCY_METRICS.md  PRI_OPENMW_COMPREHENSIVE_REPORT.md  PRODUCT_STRATEGY.md  RECURSIVE_DEPTH_ANALYSIS.md  RECURSIVE_TEST_RESULTS_2025-06-28.md  SEMANTIC_BRIDGE_OPTIMIZATION_REPORT.md  SINGULARITY_APPROACH_DOCUMENTATION.md  TESTING_METHODOLOGY.md  WARNING_SIGNS_AND_EMERGENT_BEHAVIORS.md  code review gemini 06⁄25⁄2025.md  growth-analysis-gus-bot.md
examples/: demo_interactive_approval.py  demo_manual_fix_detection.py  demo_persistent_intelligence.py  simple_debug.py
src/: recovery_utility.py  recovery_utility.py.backup.fstring  recovery_utility.py.backup.syntax  safe_workflow_manager.py  safe_workflow_manager.py.backup.fstring  safety_validator.py
test_auto_updater_package/: math_utils.py  simple_logger.py
test_cpp_project/: CMakeLists.txt
test_hello_world/: main.py
test_syntax_dir/: test_syntax_detection.py
tests/: safe_recursive_test.py  test_adversarial_fixer_security.py  test_code_connector_adversarial.py  test_cycle_tracking.py  test_gray_hat_ethics_validation.py  test_hello_world_debugging.py  test_infvx_with_memory.py  test_integration.py  test_memory_fix.py  test_ouroboros_recursive_self_improvement.py  test_real_scan_comparison.py  test_safety_escape_validation.py  test_update_package_format.py
(+240 files in other folders)
